naming corrections